--- a/generacja_window.form
+++ b/generacja_window.form
@@ -23,16 +23,17 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" min="-2" pref="335" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="copy" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="copy" max="32767" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="zamknij" min="-2" pref="163" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="jScrollPane1" alignment="0" pref="335" max="32767" attributes="0"/>
+                  <Component id="send_via_email_button" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="45" max="32767" attributes="0"/>
           </Group>
@@ -50,6 +51,8 @@
                   <Component id="copy" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="zamknij" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="send_via_email_button" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -69,12 +72,12 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Tak prezentuje si&#x119; Twoja lista zakup&#xf3;w:"/>
+        <Property name="text" type="java.lang.String" value="That&apos;s how looks your shopping list:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="zamknij">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Zamknij"/>
+        <Property name="text" type="java.lang.String" value="Close"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="zamknijActionPerformed"/>
@@ -82,10 +85,18 @@
     </Component>
     <Component class="javax.swing.JButton" name="copy">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Kopiuj do schowka"/>
+        <Property name="text" type="java.lang.String" value="Copy to clipboard"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="copyActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="send_via_email_button">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Send via e-mail"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="send_via_email_buttonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
