--- a/ustawienia_window.form
+++ b/ustawienia_window.form
@@ -23,41 +23,43 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
-                      <Component id="podglad_button" min="-2" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <Component id="podglad_button" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="mod_sciezka_button" min="-2" pref="87" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" attributes="0">
+                                  <Component id="imie_label" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                                  <Component id="mod_imie_button" min="-2" pref="120" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Component id="wyslij_slownik_button" min="-2" pref="162" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="merge_dictionaries_button" min="-2" pref="165" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                      <Component id="imie_label" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="database_login_button" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="mod_imie_button" min="-2" pref="90" max="-2" attributes="0"/>
-                  <Component id="mod_sciezka_button" min="-2" pref="87" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="36" max="32767" attributes="0"/>
+              <EmptySpace pref="18" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
-                      <Component id="wyslij_slownik_button" min="-2" pref="162" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="87" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
-                  </Group>
-              </Group>
+              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -78,9 +80,14 @@
                   <Component id="podglad_button" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="mod_sciezka_button" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-              <Component id="wyslij_slownik_button" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="28" max="32767" attributes="0"/>
+              <EmptySpace pref="25" max="32767" attributes="0"/>
+              <Component id="database_login_button" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="wyslij_slownik_button" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="merge_dictionaries_button" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -88,7 +95,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Twoje Imie:"/>
+        <Property name="text" type="java.lang.String" value="Your Name"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="imie_label">
@@ -98,12 +105,12 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="&#x15a;cie&#x17c;ka S&#x142;ownika:"/>
+        <Property name="text" type="java.lang.String" value="Path of dictionary file"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="mod_imie_button">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Modyfikuj.."/>
+        <Property name="text" type="java.lang.String" value="Edit"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mod_imie_buttonActionPerformed"/>
@@ -111,7 +118,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="mod_sciezka_button">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Modyfikuj.."/>
+        <Property name="text" type="java.lang.String" value="Edit"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mod_sciezka_buttonActionPerformed"/>
@@ -122,12 +129,12 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="24" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Ustawienia SLM"/>
+        <Property name="text" type="java.lang.String" value="SLM SETTINGS"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="wyslij_slownik_button">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Wy&#x15b;lij sw&#xf3;j s&#x142;ownik"/>
+        <Property name="text" type="java.lang.String" value="Send your dictionary"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="wyslij_slownik_buttonActionPerformed"/>
@@ -135,10 +142,23 @@
     </Component>
     <Component class="javax.swing.JButton" name="podglad_button">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Podgl&#x105;d"/>
+        <Property name="text" type="java.lang.String" value="Show path"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="podglad_buttonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="merge_dictionaries_button">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Merge dictionaries"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="database_login_button">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Login to database"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="database_login_buttonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
